backend/k8s/Middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: starry-edu-backend-ingress-middleware
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /edu
