backend/k8s/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: starry-edu-backend-deploy
  labels:
    app: starry-edu-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: starry-edu-backend
  template:
    metadata:
      labels:
        app: starry-edu-backend
    spec:
      containers:
        - name: starry-edu-backend
          image: registry.cn-shanghai.aliyuncs.com/lucasji/starry-edu-backend:latest
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /config
              name: starry-edu-backend-config
          ports:
            - containerPort: 8201
              name: server
      volumes:
        - name: starry-edu-backend-config
          configMap:
            name: starry-edu-backend-config
