backend/k8s/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: starry-edu-svc
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8001
      targetPort: 8080
  selector:
    app: starry-edu
